fix: fix bug with overflow hidden

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -38,6 +38,7 @@
       background: rgba(193, 47, 105, 0.7);
       backdrop-filter: blur(5px);
       transform: translateX(100%);
+      transition: transform 0.4s ease-in;
     }
   }
 
