--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,5 +37,5 @@ html {
 
 body {
   font-family: $montserrat;
-  overflow: hidden;
+  overflow-x: hidden;
 }
